--- a/1_4_example_files/demo-pod.yml
+++ b/1_4_example_files/demo-pod.yml
@@ -1,7 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: pod-name
+  namespace: default
+  labels:
+    app: pod-label
 spec:
   containers:
   - name: demo-container
