--- a/1_4_example_files/demo-service.yml
+++ b/1_4_example_files/demo-service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: srv-demo-1
+  name: service-name
   namespace: default
   labels:
-    app: demo-1
+    app: service-label
 spec:
   ports:
   - name: 80-80
@@ -12,5 +12,5 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    app: demo-1
+    app: pod-label
   type: ClusterIP
